# studio

./: .env  .env.example  .gitignore  .prettierignore  DEPLOYMENT.md  DEVELOPMENT.md  MODELS_GUIDELINES.md  README.md  apphosting.yaml  eslint.config.js  framer-motion-overshoot-examples.md  framer-motion-parallax-examples.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prompt.xml  remove-unused.sh  tailwind.config.ts
.augment/rules/: Nextjs-rules.md
.genkit/runtimes/: 6599-3100-1755497835193.json
.genkit/servers/: tools-6538.json
backend/: .env.example  .gitignore  .soucery.yaml  main.py  pyproject.toml  requirements.txt
docs/: NAMING_CONVENTIONS.md  blueprint.md  fouc-fix-implementation.md  hydration-hook-refactoring-summary.md
examples/: GRADIENT_BUTTON.md  NEUMORPHISM.md  OVERSHOOT_ANIMATES.md  PARALLAX_ANIMATE.md
instructions/: DEPLOYMENT.md  DEVELOPMENT.md
public/Favicons_(Beach)/: index.html  manifest.json
src/ai/: dev.ts
src/app/: Neumorphism.md  actions.ts  fastapi-actions.ts  font.ts  globals.css  index.css  layout.tsx  not-found.tsx  page.tsx
src/components/: AIAssistant.tsx  ContactForm.tsx  ContactModal.tsx  ExpandBot.tsx  FloatingButtons.tsx  Footer.tsx  FooterSkeleton.tsx  Header.tsx  Iridescence.tsx  LogoIcon.tsx  ScrollToTopButton.tsx  ThemeProvider.tsx  ThemeSwitcher.tsx  WhatsAppButton.tsx  calendar-02.tsx
src/constants/: chat.ts  dock.ts  navigation.ts
src/context/: ScrollContext.tsx
src/hooks/: use-auto-scroll.ts  use-chat-messages.ts  use-contact-modal.ts  use-dropdown-state.ts  (+9 more)
types/: stats-js.d.ts
(+89 files in other folders)
