[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "fastapi-cors>=0.0.6",
    "google-generativeai>=0.8.5",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.36.0",
]
